Fix instruction display
When the instruction is too long, the text overflows out of the container.
This commit fixes that, while maintaining link '::after' icon always next to the link text.

--- a/mon-pix/app/styles/components/_challenge-statement.scss
+++ b/mon-pix/app/styles/components/_challenge-statement.scss
@@ -20,7 +20,7 @@
     color: $blue;
 
     @include device-is('tablet') {
-      white-space: nowrap;
+      display: inline-block;
     }
 
     &:active,
